--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -40,9 +40,10 @@
 }
 
 .title {
-    font-size: 4rem;
+    font-size: 2rem;
     line-height: 1.15;
     margin: 0;
+    color: #eaeaea;
 }
 
 .title,
@@ -70,11 +71,11 @@
     align-items: center;
     flex-wrap: wrap;
     justify-content: center;
-    max-width: 800px;
+    max-width: 1200px;
 }
 
 .card {
-    width: 350px;
+    min-width: 350px;
     margin: 1rem;
     padding: 1.5rem;
     transition: color 0.15s ease, border-color 0.15s ease;
@@ -106,6 +107,16 @@
 .logo {
     height: 1em;
     margin-left: 0.5rem;
+}
+
+.error {
+    color: red;
+}
+
+.link {
+    cursor: pointer;
+    text-decoration: underline;
+    color: darkblue;
 }
 
 @media (max-width: 600px) {
